@@ -188,7 +188,6 @@ sub logwarn {
    my $self = shift;
    $self->warn(@_);
    CORE::warn(@_);
-   $self->_exit();
 } ## end sub logwarn
 
 sub logdie {
@@ -930,7 +929,7 @@ emit log whatever the configured logging level;
 
 =item C<< logwarn >>
 
-emit log at C<WARN> level, C<warn()> and then exit;
+emit log at C<WARN> level (if allowed) and C<warn()> (always);
 
 =item C<< logdie >>
 
@@ -1007,7 +1006,7 @@ get/set the line formatting;
 
 =item C<< logexit_code >>
 
-get/set the exit code to be used with C<logexit()> and C<logwarn()> (and
+get/set the exit code to be used with C<logexit()> (and
 C<logdie()> as well if C<die()> doesn't exit).
 
 =back
